# Delegate

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
.github/workflows/: windows.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp
include/Delegate/: Delegate.hpp
